--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,67 @@
+.battle {
+  display: flex;
+  float: right;
+  min-width: 60vw;
+}
+.battle .hamster {
+  margin: 2em;
+  min-width: 20em;
+}
+
+.battle button {
+  border-radius: 0.5em;
+  padding: 1em;
+  box-shadow: 0.4em 0.4em 0.5em rgb(48, 47, 47);
+}
+.battle button:active {
+  transform: translateY(0.4em);
+  box-shadow: 0.1em 0.1em 0.1em rgb(48, 47, 47);
+}
+
+.battle .message {
+  background-color: #c97b0c;
+  text-align: center;
+  max-width: 20em;
+  border-radius: 0.5em;
+  padding: 1em;
+}
+body {
+  background-image: url('./images/hamsterbg1.jpg');
+  height: 100vh;
+  background-size: cover;
+}
+.footer {
+  background-color: #954508;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+}
+.footer p {
+  text-align: center;
+  color: white;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 1em;
+}
+.gallery .hamster:hover {
+  transform: translateY(0.4em);
+}
+.hamster img {
+  width: 8em;
+  height: 8em;
+}
+
+.hamster {
+  background-color: #c97b0c;
+  text-align: center;
+
+  border-radius: 0.5em;
+  padding: 1em;
+}
+
 header {
   background-color: #954508;
 }
@@ -21,48 +85,11 @@ header nav a {
 header nav a.active {
   background-color: #c97b0c;
 }
-body {
-  background-image: url('./images/hamsterbg1.jpg');
-  height: 100vh;
-  background-size: cover;
-}
-.footer {
-  background-color: #954508;
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
-}
-.footer p {
-  text-align: center;
-}
-
-.home,
-.battle {
+.home {
   float: right;
   max-width: 50vh;
   margin-right: 40vh;
 }
-.home {
-  background-color: antiquewhite;
-  opacity: 0.5;
-  color: black;
-  padding: 2em;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  gap: 1em;
-}
-.hamster img {
-  width: 7em;
-  height: 7em;
-}
-
-.hamster {
-  background-color: #c97b0c;
-  text-align: center;
-  max-width: 20em;
-  border-radius: 0.5em;
-  padding: 1em;
+.home-message {
+  color: white;
 }
