--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,15 @@ header nav a.active {
 .home-message {
   color: white;
 }
+
+.single-hamster {
+  color: white;
+  background-color: #c97b0c;
+  text-align: center;
+  border-radius: 0.5em;
+  padding: 1em;
+  max-width: 25em;
+}
+.single-hamster img {
+  max-width: 15em;
+}
