--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,9 @@ body {
   height: 100vh;
   background-size: cover;
 }
+.cutest-hamster p {
+  color: white;
+}
 .footer {
   background-color: #954508;
   position: fixed;
